Adicionando link da Pizzaria Los Gonzalez ao portfólio (push final)

--- a/index.html
+++ b/index.html
@@ -220,19 +220,19 @@
             <h2>Projetos</h2>
             <div class="cards">
                 <div class="card">
-                    <h3>Plataforma de e-commerce</h3>
+                    <h3>Projeto 1: Plataforma de e-commerce</h3>
                     <p>Projeto inicial de desenvolvimento front-end para simulação de uma plataforma de e-commerce no setor de food service. O website da Pizzaria Los Gonzales demonstra a capacidade de estruturar, estilizar e implementar funcionalidades interativas essenciais para um sistema de pedidos online.</p>
                     <a href="https://pierregonzalez2025.github.io/Pizzaria-Los-Gonzales/" target="_blank">Ver no GitHub</a>
                 </div>
                 <div class="card">
-                    <h3>CashFlow Pro</h3>
+                    <h3>Projeto 2: CashFlow Pro</h3>
                     <p>Plataforma de Gestão Financeira Pessoal (Full-Stack).
                     Um aplicativo web completo para gerenciamento financeiro pessoal, permitindo aos usuários monitorar receitas, despesas e gerar relatórios financeiros detalhados.
                     </p>
                     <a href="https://github.com/seuusuario/projeto2" target="_blank">Ver no GitHub</a>
                 </div>
                 <div class="card">
-                    <h3>Sistema de Agendamento/Reservas de Serviços (Booking System)</h3>
+                    <h3>Projeto 3: Sistema de Agendamento/Reservas de Serviços (Booking System)</h3>
                     <p>Um sistema de gerenciamento para um pequeno negócio (ex: clínica, barbeiro, professor particular) onde clientes podem ver os horários disponíveis e agendar um serviço, e o administrador pode gerenciar a agenda.</p>
                     <a href="https://github.com/seuusuario/projeto3" target="_blank">Ver no GitHub</a>
                 </div>
