Adicionado link Pizzaria

--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
                 <span class="badge">Responsividade</span>
             </div>
         </section>
-        <!-- Projetos -->
+        <!-- Projetos Projetos-->
         <section id="projetos">
             <h2>Projetos</h2>
             <div class="cards">
